# Docker-workshop-z

./: .gitignore
pipeline/: .env  Dockerfile  docker-compose.yml  output_day_12.parquet   pipeline.py  pyproject.toml  taxi_data_ingestion.py
test/: script.py
