[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "pandas>=2.3.3",
    "pgcli>=4.4.0",
    "psycopg[binary,pool]>=3.3.4",
    "pyarrow>=22.0.0",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
